--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.7.1'
     annotationProcessor 'androidx.room:room-compiler:2.2.3'
     implementation 'androidx.room:room-runtime:2.2.3'
+    implementation 'androidx.preference:preference:1.1.0'
 }
